--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.1.3 March 23, 2014
+Aphyr's data disassembler is available as disassemble-data.
+
+Specified maven dep.
+
 0.1.2 November 5, 2013
 
 Specified maven dep.
