--- a/CHANGES
+++ b/CHANGES
@@ -1,11 +1,9 @@
 0.1.3 March 23, 2014
 Aphyr's data disassembler is available as disassemble-data.
 
-Specified maven dep.
-
 0.1.2 November 5, 2013
 
-Specified maven dep.
+Specified equinox maven dep.
 
 0.1.1 March 31, 2013
 
